Closed Bug 55991 Opened 24 years ago Closed 23 years ago

Right clicking in a cell doesn't set selection correctly

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: sujay, Assigned: cmanske)

Details

(Keywords: regression, Whiteboard: [behavior])

Attachments

(4 files)

using 10/10 build of netscape

1) launch netscape
2) launch composer
3) enter 5 x 5 table
4) click in a cell
5) right mouse click to bring up context menu
6) select Join Cell option

notice it doesn't join cell....maybe its not redrawing...

Join cell does work from Table menu.
cmanske, future.
Assignee: sfraser → cmanske
Target Milestone: --- → Future
Should this be release noted for RTM, or is it too minor a bug to document?

If the verdict is to add this to release notes, what's the recommended 
workaround?
nominate this bug to be fixed before mozilla 1.0; we should either fix this
context menu item to work or remove it from the context menu.
Target Milestone: Future → mozilla0.9
Original bug claimed 'Join cells' didn't work. That's not the problem. The
problem is that when you right-click on an empty cell, the selection is lost,
thus "Join cells" (or many other table commands) don't work. What should happen:
The caret (collapsed selection) should be set to the beginning of the cell
contents before the popup menu appears.
Status: NEW → ASSIGNED
Summary: join cell doesn't appear to work from context menu → Right clicking in a cell doesn't set selection correctly
Attached patch Fix for bug.Splinter Review
Problem was that when right clicking in an empty cell, the mouse event "target"
element is the cell itself instead of the usual textnode or other content of cell.
We were selecting the cell in that case when we really just want to put caret
(collapse the selection) into that cell.
Selection is collapsed to beginning of cell right-clicked in.
Replacing kristif with robinf. Robin Foster is now the doc contact for Composer
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
reopening bug; this does not work if the cell is empty (has no text or only br's)
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: mozilla0.9 → mozilla0.9.1
It doesn't seem to work period, even with cell contents. Must have regressed
because of other changes in that code.
Status: REOPENED → ASSIGNED
The problem was in the loop which tests if the point clicked on is within the
selection range(s). Once a range is found, we must exit loop. When there are
multiple cells selected, we were erroneously concluding that we weren't clicking
in the selection.
Keywords: patch, review
Whiteboard: FIX IN HAND need r=, sr=
sr=kin@netscape.com
Whiteboard: FIX IN HAND need r=, sr= → FIX IN HAND need r=
r=akkana
checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago23 years ago
Keywords: patch, review
Resolution: --- → FIXED
Whiteboard: FIX IN HAND need r=
still not working using 6/4 build.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I don't consider this a 9.1 stopper - can we move this to 9.2?
Who busted this! It used to work!
Status: REOPENED → ASSIGNED
Target Milestone: mozilla0.9.1 → mozilla0.9.2
Whiteboard: [behavior]
The final problem was that context click on a cell auto-selects the cell
if you click past the end of existing content or cell is empty (you
don't actually see the cell selection hightlightin, no sure why! But it
doesn't really matter when context popup is used; it shows after you are done.)
The "JoinTableCells" command didn't do anything if just one cell was selected,
but we should join with cell to right in that case. Simple fix -- just check
if there's a second cell selected.
Keywords: patch, review
Whiteboard: [behavior] → [behavior] FIX IN HAND need r=, sr=
sr=kin@netscape.com with the one change I suggested on AIM.
Whiteboard: [behavior] FIX IN HAND need r=, sr= → [behavior] FIX IN HAND need r=
r=mjudge
checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Whiteboard: [behavior] FIX IN HAND need r= → [behavior]
verified in 6/18 build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: