Fix bug 55991 (right click in table cell and context menus) r=mjudge, sr=sfraser